<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A2E8E3E3"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/layoutKu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/roundedwhite"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/nama_user"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/work_at"
                    android:src="@drawable/ic_apartment_black"
                    app:tint="@android:color/black" />

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:text="@string/company"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/location"
                    android:src="@drawable/ic_location_on_black"
                    app:tint="@android:color/black" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/location"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/nulled"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="@string/repositories"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/followerss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/nulled"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="40dp"
                    android:gravity="center"
                    android:text="@string/followers"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/followings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/nulled"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="@string/following"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatars"
            android:layout_width="120dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="6dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:src="@android:color/darker_gray"
            app:civ_border_color="#a2515151"
            app:civ_border_width="1dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="360dp"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?actionBarSize"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorColor="@android:color/white"
            app:tabIndicatorHeight="2dp"
            app:tabMode="fixed"
            app:tabRippleColor="@null"
            app:tabTextColor="@android:color/white" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="410dp">


        </androidx.viewpager.widget.ViewPager>

        <include
            layout="@layout/app_bar_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/avatars"
            android:layout_toStartOf="@id/name"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

</ScrollView>